# batteryreport

./: README.md  com.tan.batteryreport.json  meson.build
data/: com.tan.batteryreport.desktop.in  com.tan.batteryreport.gschema.xml  com.tan.batteryreport.metainfo.xml.in  com.tan.batteryreport.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: batteryreport-application.c  batteryreport-application.h  batteryreport-window.c  batteryreport-window.h  batteryreport-window.ui  batteryreport.gresource.xml  main.c  meson.build
